--- a/coverage-report/index.html
+++ b/coverage-report/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
  <head>
   <meta charset="UTF-8">
-  <title>Code Coverage for C:\calidad\Nueva carpeta\proyecto-si784-2024-i-u2-saemcc_apaza_cutipa_churacutipa_huallpa\Proyecto Unidad II\Proyecto\sosa\coverage\src</title>
+  <title>Code Coverage Report</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="_css/bootstrap.min.css?v=11.0.3" rel="stylesheet" type="text/css">
   <link href="_css/octicons.css?v=11.0.3" rel="stylesheet" type="text/css">
@@ -16,9 +16,8 @@
      <div class="col-md-12">
       <nav aria-label="breadcrumb">
        <ol class="breadcrumb">
-         <li class="breadcrumb-item active">C:\calidad\Nueva carpeta\proyecto-si784-2024-i-u2-saemcc_apaza_cutipa_churacutipa_huallpa\Proyecto Unidad II\Proyecto\sosa\coverage\src</li>
+         <li class="breadcrumb-item active">Project Code Coverage Report</li>
          <li class="breadcrumb-item">(<a href="dashboard.html">Dashboard</a>)</li>
-
        </ol>
       </nav>
      </div>
